# stm32_template

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  memory.x  template.toml
.cargo/: config.toml
src/: main.rs
