[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-rtt-target = "0.1.3"
panic-halt = "0.2"
rtt-target = "0.5.0"
stm32f446-hal = "0.0.1"

[profile.dev]
debug = true 
codegen-units = 1
lto = true 
incremental = false 

[profile.release]
debug = false 
codegen-units = 1
lto = true 

[[bin]]
name = "stm32_template"
test = false 
bench = false
